my first commit

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,178 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
+/* CSS Normalization */
+*,
+*::after,
+*::before {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* variables */
+:root {
+  --txt-dark-4: #1d1d24;
+  --txt-dark-3: #4c4c54;
+  --txt-dark-2: #808085;
+  --txt-dark-1: #cdcdce;
+  --txt-light-4: #d8e4e8;
+  --txt-light-3: #edeff0;
+  --txt-light-2: #f7f8fa;
+  --txt-light-1: #ffffff;
+  --primary-color: #0b0829;
+  --bs-font-size: 16px;
+  --h1-font-size: calc(var(--bs-font-size) * 1.5);
+  --h2-font-size: calc(var(--bs-font-size) * 1.375);
+  --h3-font-size: calc(var(--bs-font-size) * 1.25);
+  --h4-font-size: calc(var(--bs-font-size) * 1.125);
+  --h5-font-size: var(--bs-font-size);
+  --h6-font-size: calc(var(--bs-font-size) * 0.875);
+  --heading-lh: 1.35;
+  --component-txt-lh: 1;
+  --body-txt-lh: 1.5;
+  --display-fs-1: calc(var(--bs-font-size) * 5);
+  --display-fs-2: calc(var(--bs-font-size) * 4.5);
+  --display-fs-3: calc(var(--bs-font-size) * 4);
+  --display-fs-4: calc(var(--bs-font-size) * 3.5);
+  --display-fs-5: calc(var(--bs-font-size) * 3);
+  --display-fs-6: calc(var(--bs-font-size) * 2.5);
+}
+
+/* base font setting */
+:root {
+  font-size: var(--bs-font-size);
+  font-family: "Lato", sans-serif;
+  color: var(--txt-dark-4);
+  font-weight: 400;
+  word-spacing: 0.016em;
+}
+
+/* Headings */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-family: "IBM Plex Sans", sans-serif;
+  color: var(--txt-dark-3);
+  line-height: var(--heading-lh);
+  font-weight: 500;
+  /* margin-bottom: 1rem; */
+  /* text-transform: capitalize; */
+  letter-spacing: 0;
+}
+
+h1,
+.h1 {
+  font-size: var(--h1-font-size);
+}
+h2,
+.h2 {
+  font-size: var(--h2-font-size);
+  letter-spacing: 0.0015em;
+}
+h3,
+.h3 {
+  font-size: var(--h3-font-size);
+  letter-spacing: 0.0015em;
+}
+h4,
+.h4 {
+  font-size: var(--h4-font-size);
+  letter-spacing: 0.0015em;
+}
+h5,
+.h5 {
+  font-size: var(--h5-font-size);
+  letter-spacing: 0.0015em;
+}
+h6,
+.h6 {
+  font-size: var(--h6-font-size);
+  letter-spacing: 0.0025em;
+}
+
+/* Paragraphs */
+p,
+.txt_main {
+  line-height: var(--body-txt-lh);
+  /* margin-bottom: 2rem; */
+  letter-spacing: 0.005em;
+}
+.txt_caption {
+  color: var(--txt-dark-2);
+  font-size: 0.875rem;
+  letter-spacing: 0.0025em;
+}
+.txt_small {
+  color: var(--txt-dark-2);
+  font-size: 0.75rem;
+  letter-spacing: 0.005em;
+}
+.txt_disabled {
+  color: var(--txt-dark-1);
+}
+
+/* Display headings*/
+.display-1 {
+  font-size: var(--display-fs-1);
+  font-weight: 400;
+}
+.display-2 {
+  font-size: var(--display-fs-2);
+  font-weight: 400;
+}
+.display-3 {
+  font-size: var(--display-fs-3);
+  font-weight: 400;
+}
+.display-4 {
+  font-size: var(--display-fs-4);
+  font-weight: 400;
+}
+.display-5 {
+  font-size: var(--display-fs-5);
+  font-weight: 400;
+}
+.display-6 {
+  font-size: var(--display-fs-6);
+  font-weight: 400;
+}
+
+/* layout experiment*/
+.panel {
+  width: 400px;
+  border: 1px solid var(--txt-dark-1);
+  border-radius: 2px;
+  margin: 1.5rem;
+}
+.panel > div {
+  padding: 1rem;
+}
+.panel-header {
+  background: var(--txt-light-3);
+}
+.panel-header > h2 {
+  /* line-height: var(--component-txt-lh); */
+  margin-bottom: 0;
+}
+.panel-body > button {
+  font-size: 1rem;
+  color: var(--txt-dark-4);
+  padding: 0.5rem 1rem;
+  min-width: 100px;
+  border: 1px solid var(--txt-dark-3);
+  border-radius: 2px;
+  transition: 0.2s ease-in;
+}
+.panel-body > button:hover {
+  background-color: var(--txt-dark-2);
+  color: var(--txt-light-1);
 }
