--- a/src/Components/Container/container.css
+++ b/src/Components/Container/container.css
@@ -1,5 +1,11 @@
 .grid--container {
   max-width: 1200px;
   margin: 3.75rem auto;
+  margin-right: 160px;
   padding: 2.5rem 0;
+}
+
+[class*="widget__container"] {
+  background-color: var(--txt-light-1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2), 0px 2px 8px rgba(0, 0, 0, 0.16);
 }
