--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,7 +1,7 @@
 .header__container {
   width: 100vw;
   height: 3.75rem;
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-4);
   box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.15);
   display: flex;
   align-items: center;
