--- a/src/Components/TaskWidget/task-widget.css
+++ b/src/Components/TaskWidget/task-widget.css
@@ -8,9 +8,15 @@
   border-radius: 4px;
 }
 .task-widget__header {
-  width: 100%;
+  align-items: center;
+  border-bottom: 1px solid var(--txt-dark-1);
+  display: flex;
   height: 64px;
+  padding: 1.5rem;
+  width: 100%;
 }
 .task-widget__body {
+  padding: 1.5rem;
+  text-align: left;
   width: 100%;
 }
