--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,8 +1,8 @@
 .header__container {
   width: 100vw;
-  height: 3.75rem;
+  height: 60px;
   background-color: var(--primary-color-4);
-  box-shadow: 0 0 6px 3px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2), 0 6px 24px rgba(0, 0, 0, 0.16);
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
