--- a/src/Components/MainNav/main-nav.css
+++ b/src/Components/MainNav/main-nav.css
@@ -1,13 +1,17 @@
+nav {
+  grid-area: nav;
+}
 .main-nav__container {
   background-color: var(--primary-color-3);
-  height: 100%;
-  left: 0;
+  box-shadow: 0 2px 8px rgb(0 0 0/20%), 0 4px 16px rgb(0 0 0/16%);
+  height: 100vh;
   position: fixed;
+  left: 0;
   top: 0;
-  width: 160px;
+  width: 10rem;
   z-index: 9;
 }
 
 .folded {
-  width: 60px;
+  width: 3.75rem;
 }
