--- a/src/Components/Profile/profile.css
+++ b/src/Components/Profile/profile.css
@@ -15,3 +15,13 @@
 .profile--container > h5 {
   color: var(--txt-light-1);
 }
+.profile--container > a {
+  text-decoration: none;
+}
+.profile--image {
+  transition: 0.2s ease-in;
+}
+.profile--image:hover {
+  background-color: rgb(255 255 255/30%);
+  color: rgb(255 255 255/80%);
+}
